# skyfolder

./: .gitignore  Cargo.toml  Dockerfile  README.md  askama.toml  attribution.txt  build.rs  readme.md
assets/: raster_spritesheet.pxd  scripts.js  styles.css  vector_spritesheet.pxd
hosted/: spritesheet.pxd
src/: main.rs
src/lib/: errors.rs  fs_interaction.rs  helper.rs  parse_cli_args.rs  provision_certs.rs  request_handler.rs
static/: styles.css
templates/: about.html  directory.html  directory_listing.html
