[package]
name = "skyfolder"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Skyfolder is a self-contained portable HTTP/Bittorrent server that hosts a website for immediate filesharing with friends & colleagues. Made for busy people that want to share files NOW, and don't want to remember how to configure anything. Ships with good defaults and includes a built-in management graphical interface."

build = "build.rs"

[build-dependencies]
rand = "0.8.5"
minify-js = "0.5.6"

[dependencies]
tokio = { version = "1.29.1", features = ["macros","rt-multi-thread", "signal", "sync", "full"] }
tikv-jemallocator = "0.5"

axum = { version = "0.6.19", features = ["macros"]}
askama = "0.12.0"
hyper = "0.14.26"
tower = "0.4.13"
tower-http = "0.4.0"
tower-layer = "0.3.2"
tokio-util = {version = "0.7.1", features = ["io"]}
#rustls-acme = "0.7.3"



clap = { version = "4.3.0", features = ["cargo"]}
get_if_addrs = "0.5.3"
chrono = "0.4"
bytes = "1.4.0"
#smartstring = "1.0.1" eventually use this

[profile.release]
#debug = 1
#debuginfo-level = 1
lto = true
codegen-units = 1
panic = "abort"
debug-assertions=false
opt-level=3